PhD Proposal - Thursday Afternoon 02

--- a/PhDProposal 01/proposal.bib
+++ b/PhDProposal 01/proposal.bib
@@ -1,3 +1,104 @@
+@article{Lin2012,
+abstract = {The article makes the case that Python is the next wave in Earth sciences computing for one simple reason: Python enables users to do more and better science. The article also describes how these features provide abilities in scientific computing that are currently less likely to be available with existing tools, and highlight the growing support for Python in the Earth sciences as well as events at the upcoming 2013 AMS Annual Meeting that will cover Python in the Earth sciences. A number of other languages have some of Python's features: Fortran 90, for instance, also supports array syntax. Python's unique strengths are the interconnectedness and comprehensiveness of its tool suite and the ease with which one can apply innovations from other communities and disciplines. The Earth sciences community has begun to recognize the unique benefits of Python, and as a result its population of users is growing.},
+author = {Lin, Johnny Wei Bing},
+doi = {10.1175/BAMS-D-12-00148.1},
+issn = {00030007},
+journal = {Bulletin of the American Meteorological Society},
+number = {12},
+pages = {1823--1824},
+publisher = {American Meteorological Society},
+title = {{Why python is the next wave in earth sciences computing}},
+volume = {93},
+year = {2012}
+}
+
+
+@article{Farrell2018,
+abstract = {Abstract Environmental research requires understanding nonlinear ecological dynamics that interact across multiple spatial and temporal scales. The analysis of long-term and high-frequency sensor data combined with simulation modeling enables interpretation of complex ecological phenomena, and the computational skills needed to conduct these analyses are increasingly being integrated into graduate student training programs in ecology. Despite its importance, however, computational literacy?that is, the ability to harness the power of computer technologies to accomplish tasks?is rarely taught in undergraduate ecology classrooms, representing a major gap in training students to tackle complex environmental challenges. Through our experience developing undergraduate curricula in long-term and high-frequency data analysis and simulation modeling for two environmental science pedagogical initiatives, Project EDDIE (Environmental Data-Driven Inquiry and Exploration) and Macrosystems EDDIE, we have found that students often feel intimidated by computational tasks, which is compounded by the lack of familiarity with software (e.g., R) and the steep learning curves associated with script-based analytical tools. The use of prepackaged, flexible modules that introduce programming as a mechanism to explore environmental datasets and teach inquiry-based ecology, such as those developed for Project EDDIE and Macrosystems EDDIE, can significantly increase students? experience and comfort levels with advanced computational tools. These types of modules in turn provide great potential for empowering students with the computational literacy needed to ask ecological questions and test hypotheses on their own. As continental-scale sensor observatory networks rapidly expand the availability of long-term and high-frequency data, students with the skills to manipulate, visualize, and interpret such data will be well-prepared for diverse careers in data science, and will help advance the future of open, reproducible science in ecology.},
+author = {Farrell, Kaitlin J. and Carey, Cayelan C.},
+doi = {10.1002/ece3.4363},
+issn = {17510260},
+journal = {International Journal of Business Innovation and Research},
+keywords = {Active learning,Big Data,Computer programming,Data science,Education,R software,Sensordata,Teaching modules},
+number = {3},
+pages = {7744--7751},
+publisher = {Wiley Online Library},
+title = {{Power, pitfalls, and potential for integrating computational literacy into undergraduate ecology courses}},
+volume = {17},
+year = {2018}
+}
+
+
+@article{Michener2012,
+author = {Michener, William K and Jones, Matthew B},
+issn = {0169-5347},
+journal = {Trends in Ecology and Evolution,},
+number = {2},
+pages = {85--93},
+publisher = {Elsevier},
+title = {{Ecoinformatics: supporting ecology as a data-intensive scienceTrends in Ecology and Evolution,}},
+url = {http://www.sciencedirect.com/science/article/pii/S0169534711003399},
+volume = {27(2)},
+year = {2012}
+}
+
+
+@article{Hampton2015,
+abstract = {The field of ecology is poised to take advantage of emerging technologies that facilitate the gathering, analyzing, and sharing of data, methods, and results. The concept of transparency at all stages of the research process, coupled with free and open access to data, code, and papers, constitutes "open science." Despite the many benefits of an open approach to science, a number of barriers to entry exist that may prevent researchers from embracing openness in their own work. Here we describe several key shifts in mindset that underpin the transition to more open science. These shifts in mindset include thinking about data stewardship rather than data ownership, embracing transparency throughout the data life-cycle and project duration, and accepting critique in public. Though foreign and perhaps frightening at first, these changes in thinking stand to benefit the field of ecology by fostering collegiality and broadening access to data and findings. We present an overview of tools and best practices that can enable these shifts in mindset at each stage of the research process, including tools to support data management planning and reproducible analyses, strategies for soliciting constructive feedback throughout the research process, and methods of broadening access to final research products.},
+archivePrefix = {arXiv},
+arxivId = {10.7287/peerj.preprints.270v1},
+author = {Hampton, Stephanie E. and Anderson, Sean S. and Bagby, Sarah C. and Gries, Corinna and Han, Xueying and Hart, Edmund M. and Jones, Matthew B. and Lenhardt, W. Christopher and MacDonald, Andrew and Michener, William K. and Mudge, Joe and Pourmokhtarian, Afshin and Schildhauer, Mark P. and Woo, Kara H. and Zimmerman, Naupaka},
+doi = {10.1890/ES14-00402.1},
+eprint = {peerj.preprints.270v1},
+file = {:Users/bpo/Library/Application Support/Mendeley Desktop/Downloaded/Hampton et al. - 2015 - The Tao of open science for ecology.pdf:pdf},
+isbn = {6176367670},
+issn = {2150-8925},
+journal = {Ecosphere},
+keywords = {accepted 18 march 2015,al,article distributed under the,collins,commons,copyright,corresponding,data management,ecology,editor,l,open access,open science,published 23 july 2015,received 21 october 2014,reproducible research,revised 7 march 2015,s,terms of the creative,this is an open-access,{\'{o}} 2015 hampton et},
+mendeley-groups = {To Read!,PhD Proposal BibTex/cited},
+number = {7},
+pages = {art120},
+primaryClass = {10.7287},
+title = {{The Tao of open science for ecology}},
+url = {http://doi.wiley.com/10.1890/ES14-00402.1},
+volume = {6},
+year = {2015}
+}
+
+
+@article{Villa2001,
+abstract = {Multiple modelling paradigms are necessary to formulate crucial modelling problems in modern environmental science. Modelling paradigms help researchers to conceive, formulate and solve problems by providing semantic structures to organise their view of a system or process. An unusually large array of different paradigms is used in Ecology, reflecting the complexity and variety of the natural World. As a result of this, multi-disciplinary problems in particular suffer of representational difficulties that prevent them to be approached efficiently with available software toolkits. In this paper I outline the theoretical aspects of model compatibility in the operational aspects of representation, scale and domain, and I describe the Integrating Modelling Architecture (IMA), a declarative framework and an open-source software toolkit to allow integrated meta-modelling. The IMA allows to specify generic model components using a common markup language, and loads paradigm-specific grammars that can be extended to support multiple paradigms. Among the project's goals are: (1) allow web-based integration of models and state-of-the-art resources distributed across a wide area network; (2) integrate and reuse existing simulation programs and toolkits; (3) allow integration between independently developed models adopting different modelling paradigms, scales, and domains; and (4) provide extendible, efficient and clear abstractions to conceptualise and solve complex, multiple-paradigm modelling problems in environmental science. At the end of the paper I argue that an integrative meta-modelling paradigm allows us to formulate and solve new important problems, and illustrate some of the new modelling scenarios enabled by the availability of these new concepts and tools. {\textcopyright} 2001 Elsevier Science.},
+author = {Villa, Ferdinando},
+doi = {10.1016/S0304-3800(00)00422-1},
+issn = {03043800},
+journal = {Ecological Modelling},
+keywords = {Computer languages,Multiple-paradigm modelling,Multiple-scale modelling,Simulation,XML},
+mendeley-groups = {PhD Proposal BibTex/cited},
+number = {1},
+pages = {23--42},
+publisher = {Elsevier},
+title = {{Integrating modelling architecture: A declarative framework for multi-paradigm, multi-scale ecological modelling}},
+volume = {137},
+year = {2001}
+}
+
+
+@article{Reichman2011,
+abstract = {Ecology is a synthetic discipline benefiting from open access to data from the earth, life, and social sciences. Technological challenges exist, however, due to the dispersed and heterogeneous nature of these data. Standardization of methods and development of robust metadata can increase data access but are not sufficient. Reproducibility of analyses is also important, and executable workflows are addressing this issue by capturing data provenance. Sociological challenges, including inadequate rewards for sharing data, must also be resolved. The establishment of well-curated, federated data repositories will provide a means to preserve data while promoting attribution and acknowledgement of its use.},
+author = {Reichman, O. J. and Jones, Matthew B. and Schildhauer, Mark P.},
+doi = {10.1126/science.1197962},
+issn = {00368075},
+journal = {Science},
+mendeley-groups = {PhD Proposal BibTex/cited,PhD Proposal BibTex/Section 3},
+number = {6018},
+pages = {703--705},
+publisher = {American Association for the Advancement of Science},
+title = {{Challenges and opportunities of open data in ecology}},
+volume = {331},
+year = {2011}
+}
+
+
 @article{Irwin2015,
 abstract = {Model projections indicate that climate change may dramatically restructure phytoplankton communities, with cascading consequences for marine food webs. It is currently not known whether evolutionary change is likely to be able to keep pace with the rate of climate change. For simplicity, and in the absence of evidence to the contrary, most model projections assume species have fixed environmental preferences and will not adapt to changing environmental conditions on the century scale. Using 15 y of observations from Station CARIACO (Carbon Retention in a Colored Ocean), we show that most of the dominant species from a marine phytoplankton community were able to adapt their realized niches to track average increases in water temperature and irradiance, but the majority of species exhibited a fixed niche for nitrate. We do not know the extent of this adaptive capacity, so we cannot conclude that phytoplankton will be able to adapt to the changes anticipated over the next century, but community ecosystem models can no longer assume that phytoplankton cannot adapt.},
 author = {Irwin, Andrew J. and Finkel, Zoe V. and M{\"{u}}ller-Karger, Frank E. and {Troccoli Ghinaglia}, Luis},
