PhD Proposal - Thursday Evening 01

--- a/PhDProposal 01/Chp22-Pre2/PreResults22.tex
+++ b/PhDProposal 01/Chp22-Pre2/PreResults22.tex
@@ -52,13 +52,16 @@ XXX
 
 
 
-\subsection{Object-oriented structure}
+\small {\textbf{Object-oriented structure}}
+
 Explain Code structure, with some nice graphicx
 XXX
 
-XXXX
+XXXXxx xxxxxxx xxxxxxx xxxxxxx xxxxxxx xxxxxxx xxxxxx xxxxxxx xxxxxx xxxxxxx xxxxxx xxxxxx xxxxxxxx xxxxxxx xxxxxxxx xxxxxxxx xxxxxxxx xxxxxxxx xxxxxxxxx xxxxxx xxxxxxx xxxxxx xxxxxx xxxxxxx xxxxxxx xxxx xxxxx x
 
-\subsection{Model formulation and usage}
+
+\noindent \small {\textbf{Model formulation and usage}}
+
 xXXX
 
 explain how to run the model!
