PhD Proposal - Thrusday night 01

--- a/PhDProposal 01/Chp1-Intro/Intro.tex
+++ b/PhDProposal 01/Chp1-Intro/Intro.tex
@@ -123,6 +123,10 @@ The program was established as a joint-project of the Venezuelan Fondo Nacional 
 MEASURED DYNAMICS
 Simply mention the major publications and rough findings, further discussion in section 2
 
+perhaps here:
+inter-annual and subdecadal variability in nutrient geochemistry \citep{Scranton2014}
+
+
 LONG TERM TRENDS <- not here, but discuss this in the 2nd section (MS 1)
 
 SCIENTIFIC FINDINGS - RESULTS what has been found here?
