--- a/PhDProposal 01/Chp2-Pre/PreResults2.tex
+++ b/PhDProposal 01/Chp2-Pre/PreResults2.tex
@@ -10,7 +10,16 @@ As documented by \citet{Taylor2012}
 
 and further investigated by \citet{Pinckney2015}
 
-inter-annual and subdecadal variability in nutrient geochemistry \citep{Scranton2014}
+Interesting thing is that there was this shift in the PhytoplanktonCommunity but apparently no real reduction in Export! (This is in Taylor and Pinckney somehwere)
+this would be coherent with Pinckney, no real reduction in biomass, but shifts in the community and towards greater depth, talk about depth of the euphotic zone! also have that data thanks to JP and CBN
+
+\begin{figure}
+\centering
+\includegraphics[trim = 0mm 0mm 0mm 0mm, clip, width=0.7\linewidth]{./Chp2-Pre/Tayloretal2012_F3.large.jpg}
+\caption[Scheme]{\small {"Shifts in phytoplankton community composition and sardine landings from the southeastern Margarita Island fishery. Monthly observations presented as gray symbols. Box and whisker plots depict binned annual variations in diatom (A), dinoflagellate (B), coccolithophorid (C) inventories integrated over the upper 55 m and sardine fishery landings (D) in metric tons. Boxes represent the interquartile range of all observations (25th to 75th percentiles). Internal horizontal lines and whiskers are medians and 10th to 90th percentiles, respectively. Blue and red horizontal lines represent the grand medians of all observations between 1996 and 2004 and between 2005 and 2009, respectively. Data in early and late bins are significantly different in all cases (ANOVA; P < 0.001). [Fishery data are courtesy of L. W. Gonzáles (Universidad de Oriente, Boca de Río, Isla de Margarita, Venezuela); zero values artificially set at 0.5 for plotting purposes.)" from \citet{Taylor2012}}}
+\label{PrinComp}
+\end{figure}
+
 
 
 
@@ -18,10 +27,16 @@ The term regime shift is actually not very well defined and has been used... \ci
 There are global trends and indications of a regime shift, but methods to identify regime shifts are not well established and have been critically discussed in the literature \citep{Steele2004a, Mantua2004a, Litzow2016a}. To my knowledge no formal exploration of a potential regime shift has been performed with the CARIACO data, therefore the term regime shift is used here to describe the observed changes in the phytoplankton community and physical environment without presupposing a formally defined state shift in the entire ecosystem. 
 
 
+\begin{figure}
+\centering
+\includegraphics[trim = 0mm 0mm 0mm 0mm, clip, width=.9\linewidth]{./Chp2-Pre/Pinckneyetal2015_TotChlAcontoursMLD.png}
+\caption[Scheme]{\small {Contour plot of HPLC-measured $chl~a$ for the two time periods with full data coverage (January 1996 to October 2000 and July 2006 to December 2010). Light white dots indicate data points. White line shows the depth of the mixed layer. HPLC Data and MLD depth was received from James Pinckney and Claudia Benitez-Nelson.}}
+\label{PrinComp}
+\end{figure}
+
 
 Talk about the data again
 
-This will be a first! first proper ecological model apart from this Export Flux model only including diatoms \citep{Walsh2002a}
 Also talk about mutshinda et al studies!
 Mutshinda study one, bayesian approach: \cite{Mutshinda2013a}
 
@@ -29,11 +44,12 @@ Mutshinda study, same year, environmental factors: \cite{Mutshinda2013}
 
 culminated in the study in PNAS: "Phytoplankton adapt to a changing environment" \cite{Irwin2015}
 
+detailed phytoplankton data has been used in the previous studies for statistical analysis, but suprisingly not yet for ecosystem or trait-based modeling
+This will be a first! first proper ecological model apart from this Export Flux model only including diatoms \citep{Walsh2002a}
 
 FUNCTIONAL TYPES STRUCTURE --> explain linkage between Pigment Data that I use and functional diversity measurements (XMoreno et al. 2012X) take this from Pinckney et al. 2015...
-Thus, photopigment-based measures offer an efficient way to quantify community or functional diversity (X Moreno et al., 2012 X). (From Pinckney et al 2015)
+Thus, photopigment-based measures offer an efficient way to quantify community or functional diversity (X Moreno et al., 2012 X). (From Pinckney et al 2015) ..> this would also be good to discuss in part 4!
 
-Interesting thing is that there was this shift in the PhytoplanktonCommunity but apparently no real reduction in Export! (This is in Taylor and Pinckney somehwere)
 bb
 
 
